--- a/src/partials/2-hero.html
+++ b/src/partials/2-hero.html
@@ -1,3 +1,88 @@
 <section class="hero">
-  <div class="container"></div>
+  <div class="container">
+    <div class="hero-container">
+      <div class="hero-text-wrapper">
+        <h1 class="hero-title">
+          Welcome to our <span class="hero-title-accent">collection</span> of
+          premium watches
+        </h1>
+        <p class="hero-text">
+          Our watches are not just timepieces, but also an expression of your
+          personality and lifestyle. From classic designs to modern ones, we
+          have a watch to suit every taste and occasion.
+        </p>
+      </div>
+      <div class="hero-scroll-wrapper">
+        <picture>
+          <source
+            media="(min-width: 1280px)"
+            srcset="
+              ./images/hero/hero_scroll_desktop.png    1x,
+              ./images/hero/hero_scroll_desktop@2x.png 2x
+            "
+            type="image/png"
+          />
+          <source
+            media="(min-width: 768px)"
+            srcset="
+              ./images/hero/hero_scroll_tablet.png    1x,
+              ./images/hero/hero_scroll_tablet@2x.png 2x
+            "
+            type="image/png"
+          />
+          <source
+            media="(max-width: 767px)"
+            srcset="
+              ./images/hero/hero_scroll.png    1x,
+              ./images/hero/hero_scroll@2x.png 2x
+            "
+            type="image/png"
+          />
+          <img
+            src="../images/hero/hero_scroll.png"
+            alt="team"
+            width="108"
+            height="44"
+            class="hero-team-img"
+          />
+        </picture>
+        <a href="#footer" class="hero-link">Scroll down</a>
+      </div>
+    </div>
+
+    <picture>
+      <source
+        media="(min-width: 1280px)"
+        srcset="
+          ./images/hero/hero_watch_desktop.jpg     1x,
+          ../images/hero/hero_watch_desktop@2x.jpg 2x
+        "
+        type="image/jpg"
+      />
+      <source
+        media="(min-width: 768px)"
+        srcset="
+          ./images/hero/hero_watch_tablet.jpg    1x,
+          ./images/hero/hero_watch_tablet@2x.jpg 2x
+        "
+        type="image/jpg"
+      />
+      <source
+        media="(max-width: 767px)"
+        srcset="
+          ./images/hero/hero_watch.jpg    1x,
+          ./images/hero/hero_watch@2x.jpg 2x
+        "
+        type="image/jpg"
+      />
+
+      <img
+        src="./images/mob-3.jpg"
+        alt="watches"
+        width="335"
+        height="366"
+        class="hero-watches-img"
+      />
+    </picture>
+  </div>
 </section>
