--- a/src/partials/9-footer.html
+++ b/src/partials/9-footer.html
@@ -1,3 +1,35 @@
-<footer class="footer">
-  <div class="container"></div>
+<footer class="footer-container">
+  <div class="footer-page">
+    <div>
+      <a class="footer-page-logo" href="./index.html">watchcharm</a>
+      <ul class="footer-icon-list">
+        <li class="footer-item-icon">
+          <a class="footer-icon-link" href="">
+            <svg class="footer-icon-social" width="20" height="18">
+              <use href="../images/icons.svg#icon-facebook"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="footer-item-icon">
+          <a class="footer-icon-link" href="">
+            <svg class="footer-icon-social" width="20" height="18">
+              <use href="../images/icons.svg#icon-instagram"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="footer-item-icon">
+          <a class="footer-icon-link" href="">
+            <svg class="footer-icon-social" width="20" height="18">
+              <use href="../images/icons.svg#icon-youtube"></use>
+            </svg>
+          </a>
+        </li>
+      </ul>
+    </div>
+    <div class="footer-tel-cont">
+      <a class="footer-tel-link" href="tel:+380684439426"
+        >+380 (68) 443-94-26</a
+      >
+    </div>
+  </div>
 </footer>
