--- a/src/partials/5-advertisement.html
+++ b/src/partials/5-advertisement.html
@@ -1,5 +1,6 @@
 <section class="advertisement">
   <div class="container">
+    <h2 class="vii">Advertisement</h2>
     <h3 class="advertisement-title">
       Choose <span class="advertisement-story">your story</span>, making every
       moment unique. Time is your style, and we reveal it.
