--- a/src/css/5-advertisement.css
+++ b/src/css/5-advertisement.css
@@ -14,6 +14,7 @@ desktop padding:top 50px padding-bottom: 50px) */
   border-radius: 30px;
   width: 100%;
 
+  max-width: 335px;
   max-height: 363px;
 
   display: flex;
@@ -22,11 +23,57 @@ desktop padding:top 50px padding-bottom: 50px) */
   gap: 28px;
 
   background-color: #0c0c0c;
-  background-image: url(../images/advertisement/advertisement_img.jpg);
+  background-image: url(../images/advertisement/advertisement.png);
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
 }
+
+@media screen and (max-width: 767px) {
+  .advertisement .container {
+    background-image: url(../images/advertisement/advertisement@2x.png);
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .advertisement .container {
+    background-image: url(../images/advertisement/advertisement-tablet@2x.png);
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .advertisement .container {
+    background-image: url(../images/advertisement/advertisement-desktop@2x.png);
+  }
+}
+
+/* #region media 2x */
+
+@media screen and (max-width: 767px) and (min-device-pixel-ratio: 2),
+  (min-resolution: 192dpi),
+  (min-resolution: 2dppx) {
+  .advertisement .container {
+    background-image: url(../images/advertisement/advertisement@2x.png);
+  }
+}
+
+@media screen and (min-width: 768px) and (min-device-pixel-ratio: 2),
+  (min-resolution: 192dpi),
+  (min-resolution: 2dppx) {
+  .advertisement .container {
+    background-image: url(../images/advertisement/advertisement-tablet@2x.png);
+  }
+}
+
+@media screen and (min-width: 1280px) and (min-device-pixel-ratio: 2),
+  (min-resolution: 192dpi),
+  (min-resolution: 2dppx) {
+  .advertisement .container {
+    background-image: url(../images/advertisement/advertisement-desktop@2x.png);
+  }
+}
+
+/* #endregion media 2x */
 
 .advertisement-title {
   font-weight: 600;
