--- a/src/css/2-hero.css
+++ b/src/css/2-hero.css
@@ -1,18 +1,18 @@
 .hero {
   padding-top: 60px;
-  padding-bottom: 60px;
+  padding-bottom: 30px;
 }
 
 @media only screen and (min-width: 768px) {
   .hero {
     padding-top: 80px;
-    padding-bottom: 80px;
+    padding-bottom: 40px;
   }
 }
 
 @media only screen and (min-width: 1280px) {
   .hero {
-    padding-bottom: 100px;
+    padding-bottom: 50px;
   }
 }
 
@@ -92,13 +92,11 @@
 
 .hero-team-img {
   width: 108px;
-  height: 44px;
 }
 
 @media only screen and (min-width: 768px) {
   .hero-team-img {
     width: 136px;
-    height: 60px;
   }
 }
 
@@ -127,4 +125,8 @@
     font-size: 20px;
     line-height: 1;
   }
+}
+
+.hero-watches-img {
+  width: 100%;
 }
