--- a/src/partials/2-hero.html
+++ b/src/partials/2-hero.html
@@ -39,7 +39,7 @@
             type="image/png"
           />
           <img
-            src="../images/hero/hero_scroll.png"
+            src="./images/hero/hero_scroll.png"
             alt="team"
             width="108"
             height="44"
@@ -54,8 +54,8 @@
       <source
         media="(min-width: 1280px)"
         srcset="
-          ./images/hero/hero_watch_desktop.jpg     1x,
-          ../images/hero/hero_watch_desktop@2x.jpg 2x
+          ./images/hero/hero_watch_desktop.jpg    1x,
+          ./images/hero/hero_watch_desktop@2x.jpg 2x
         "
         type="image/jpg"
       />
