--- a/src/partials/7-reviews.html
+++ b/src/partials/7-reviews.html
@@ -1,3 +1,73 @@
 <section class="reviews">
-  <div class="container"></div>
+  <div class="container">
+    <h2 class="reviews-title">Reviews</h2>
+    <ul class="reviews-list">
+      <li class="review-card">
+        <img
+          srcset="
+            ./images/reviews/reviews2.png    1x,
+            ./images/reviews/reviews2@2x.png 2x
+          "
+          src="./images/reviews/reviews2.png"
+          alt="photo John Wax"
+          width="56"
+          height="56"
+          loading="lazy"
+          class="review-img"
+        />
+        <div class="review-text-wrapper">
+          <h3 class="review-name">John Wax</h3>
+          <p class="review-dsc">
+            Buying a watch from was the best choice for me. The design is
+            perfectly combined with high quality materials. The strap fits
+            nicely on the hand, and the mechanism works flawlessly.
+          </p>
+        </div>
+      </li>
+      <li class="review-card hide-on-mob">
+        <img
+          srcset="
+            ./images/reviews/reviews.png    1x,
+            ./images/reviews/reviews@2x.png 2x
+          "
+          src="./images/reviews/reviews.png"
+          alt="photo Victoria Romashenko"
+          width="56"
+          height="56"
+          loading="lazy"
+          class="review-img"
+        />
+        <div class="review-text-wrapper">
+          <h3 class="review-name">Victoria Romashenko</h3>
+          <p class="review-dsc">
+            Can't take my eyes off my watch from. Every time I put it on, it is
+            admired by those around me. The build quality and attention to
+            detail make it a real gem among my accessories.
+          </p>
+        </div>
+      </li>
+      <li class="review-card hide-on-mob hide-on-tab">
+        <img
+          srcset="
+            ./images/reviews/reviews3.png    1x,
+            ./images/reviews/reviews3@2x.png 2x
+          "
+          src="./images/reviews/reviews3.png"
+          alt="photo Anastasia Trachuk"
+          width="56"
+          height="56"
+          loading="lazy"
+          class="review-img"
+        />
+        <div class="review-text-wrapper">
+          <h3 class="review-name">Anastasia Trachuk</h3>
+          <p class="review-dsc">
+            My watch from is a real masterpiece. Every detail impresses with the
+            high quality of execution. Special features like [specify features]
+            make it an indispensable companion in my daily life.
+          </p>
+        </div>
+      </li>
+    </ul>
+  </div>
 </section>
