--- a/src/partials/5-advertisement.html
+++ b/src/partials/5-advertisement.html
@@ -5,6 +5,8 @@
       Choose <span class="advertisement-story">your story</span>, making every
       moment unique. Time is your style, and we reveal it.
     </h3>
-    <button class="advertisement-btn" type="button">Contact Us</button>
+    <button class="advertisement-btn" type="button" href="#contact-us">
+      Contact Us
+    </button>
   </div>
 </section>
