--- a/src/css/8-contact-us.css
+++ b/src/css/8-contact-us.css
@@ -1,25 +1,32 @@
 .contact {
+  padding-top: 30px;
+  padding-bottom: 30px;
 }
 .container {
 }
 .contact-title {
-  font: 600 32px / 1 'Gilroy', sans-serif;
+  font-weight: 600;
+  font-size: 32px;
+  line-height: 1;
   letter-spacing: -0.02em;
-  color: #0c0c0c;
+  color: var(--main);
   margin-bottom: 24px;
 }
 .contact-modal {
   border-radius: 30px;
-  padding: 48px 28px;
-  width: 335px;
+  max-width: 100%;
   height: 512px;
-  background-color: #f3f3f3;
+  background-color: var(--background);
 }
 .contact-text {
-  font: 500 14px / 1.28571 'Gilroy', sans-serif;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.28571;
   letter-spacing: -0.02em;
   color: rgba(12, 12, 12, 0.7);
-  margin-bottom: 28px;
+  padding-top: 48px;
+  padding-left: 28px;
+  padding-right: 28px;
 }
 .contact-form {
   display: flex;
@@ -27,6 +34,7 @@
   justify-content: flex-start;
   flex-direction: column;
   gap: 28px;
+  padding: 48px 28px;
 }
 .contact-input-container {
 }
@@ -37,6 +45,18 @@
   padding: 12px 226px 12px 14px;
   width: 279px;
   height: 42px;
+}
+.contact-input-name:focus {
+  border-color: #3350e9;
+}
+.contact-input-name:valid {
+  border-color: #3350e9;
+}
+input::placeholder {
+  color: var(--main);
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.28571;
 }
 
 .contact-input-email {
@@ -75,7 +95,19 @@
   width: 134px;
   height: 42px;
   background-color: #3350e9;
-  font: 500 14px / 1.28571 'Gilroy', sans-serif;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.28571;
   text-align: center;
-  color: #fbfbfb;
+  color: var(--background);
+}
+
+.contact-modal-button:hover,
+.contact-modal-button:focus {
+  background-color: #1f3cd4;
+}
+
+.contact-us-watches-img {
+  border-radius: 30px;
+  padding-top: 20px;
 }
