--- a/src/partials/8-contact-us.html
+++ b/src/partials/8-contact-us.html
@@ -52,5 +52,40 @@
         <button type="submit" class="contact-modal-button">Send</button>
       </form>
     </div>
+    <picture>
+      <source
+        media="(min-width: 1280px)"
+        srcset="
+          ./images/contact-us/contact-us-clock-desktop.jpg    1x,
+          ./images/contact-us/contact-us-clock-desktop@2x.jpg 2x
+        "
+        type="image/jpg"
+      />
+      <source
+        media="(min-width: 768px)"
+        srcset="
+          ./images/contact-us/contact-us-clock-tablet.jpg    1x,
+          ./images/contact-us/contact-us-clock-tablet@2x.jpg 2x
+        "
+        type="image/jpg"
+      />
+      <source
+        media="(max-width: 767px)"
+        srcset="
+          ./images/contact-us/contact-us-clock.jpg    1x,
+          ./images/contact-us/contact-us-clock@2x.jpg 2x
+        "
+        type="image/jpg"
+      />
+  
+      <img
+        src="./images/contact-us/contact-us-clock.jpg"
+        alt="watches"
+        width="335"
+        height="446"
+        class="contact-us-watches-img"
+      />
+    </picture>
   </div>
+  
 </section>
