--- a/src/partials/1-header.html
+++ b/src/partials/1-header.html
@@ -1,3 +1,55 @@
-<header>
-  <div class="container"></div>
+<header class="header">
+  <div class="container header-container">
+    <a class="header-logo" href="#">watchcharm</a>
+    <div class="header-menu">
+      <nav class="header-nav">
+        <ul class="header-nav-list">
+          <li class="header-nav-item header-nav-item-active">
+            <a href="#" class="header-nav-link">Home</a>
+          </li>
+          <li class="header-nav-item">
+            <a href="#" class="header-nav-link">About Us</a>
+          </li>
+          <li class="header-nav-item">
+            <a href="#" class="header-nav-link">Catalog</a>
+          </li>
+          <li class="header-nav-item">
+            <a href="#" class="header-nav-link">Sale</a>
+          </li>
+          <li class="header-nav-item">
+            <a href="#" class="header-nav-link">Reviews</a>
+          </li>
+          <li class="header-nav-item">
+            <a href="#" class="header-nav-link">Contact Us</a>
+          </li>
+        </ul>
+      </nav>
+      <ul class="header-socials">
+        <li class="header-socials-item">
+          <a href="#" class="header-socials-link">
+            <svg class="header-socials-icon" width="18" height="18">
+              <use href="../images/icons.svg#icon-facebook"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="header-socials-item">
+          <a href="#" class="header-socials-link">
+            <svg class="header-socials-icon" width="18" height="18">
+              <use href="../images/icons.svg#icon-instagram"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="header-socials-item">
+          <a href="#" class="header-socials-link">
+            <svg class="header-socials-icon" width="18" height="18">
+              <use href="../images/icons.svg#icon-youtube"></use>
+            </svg>
+          </a>
+        </li>
+      </ul>
+    </div>
+    <button class="header-burger">
+      <span class="header-burger-span"></span>
+    </button>
+  </div>
 </header>
