--- a/src/partials/1-header.html
+++ b/src/partials/1-header.html
@@ -26,21 +26,36 @@
       </nav>
       <ul class="header-socials">
         <li class="header-socials-item">
-          <a href="#" class="header-socials-link">
+          <a
+            class="header-socials-link"
+            href="https://www.facebook.com/goITclub/"
+            target="_blank"
+            referrerpolicy="no-referrer"
+          >
             <svg class="header-socials-icon" width="18" height="18">
               <use href="../images/icons.svg#icon-facebook"></use>
             </svg>
           </a>
         </li>
         <li class="header-socials-item">
-          <a href="#" class="header-socials-link">
+          <a
+            class="header-socials-link"
+            href="https://www.instagram.com/goitclub/"
+            target="_blank"
+            referrerpolicy="no-referrer"
+          >
             <svg class="header-socials-icon" width="18" height="18">
               <use href="../images/icons.svg#icon-instagram"></use>
             </svg>
           </a>
         </li>
         <li class="header-socials-item">
-          <a href="#" class="header-socials-link">
+          <a
+            class="header-socials-link"
+            href="https://www.youtube.com/c/GoIT"
+            target="_blank"
+            referrerpolicy="no-referrer"
+          >
             <svg class="header-socials-icon" width="18" height="18">
               <use href="../images/icons.svg#icon-youtube"></use>
             </svg>
