--- a/src/partials/3-about-us.html
+++ b/src/partials/3-about-us.html
@@ -1,3 +1,34 @@
 <section class="about">
-  <div class="container"></div>
+  <div class="container">
+    <div class="about-welcome">
+      <h2 class="about-title">About Us</h2>
+      <p class="about-text">
+        Welcome to our premium watch collection, where luxury and style meet
+        functionality and precision. Our selection of timepieces embodies the
+        very best in Swiss craftsmanship and engineering, ensuring that you'll
+        always have a reliable and stylish accessory on your wrist.
+      </p>
+      <p class="about-text">
+        At our premium watch collection, we believe that a watch is more than
+        just a timekeeping device &mdash it's a statement piece that reflects
+        your personality and style. So why settle for anything less than the
+        best?
+      </p>
+      <button class="about-btn" type="button">View catalog</button>
+    </div>
+    <div class="about-img">
+      <picture>
+        <source media="(max-width: 767px)" srcset="" type="image/jpg" />
+        <source media="(min-width: 768px)" srcset="" type="image/jpg" />
+        <source media="(min-width: 1280px)" srcset="" type="image/jpg" />
+        <img
+          src=""
+          alt="The wristwatch shows that it is a beautiful Sunday morning"
+          width=""
+          height=""
+          loading="lazy"
+        />
+      </picture>
+    </div>
+  </div>
 </section>
