add-sections-animation

--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -27,6 +27,17 @@
   overflow: hidden;
 }
 
+.section-animation {
+  opacity: 0;
+  transform: translateY(50px);
+  transition: transform 0.5s cubic-bezier(0.4, 0, 0.2, 1),
+    opacity 0.5s cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.body-prevent-scroll {
+  overflow-y: hidden;
+}
+
 h1,
 h2,
 h3,
