--- a/src/partials/8-contact-us.html
+++ b/src/partials/8-contact-us.html
@@ -1,5 +1,5 @@
-<section class="contact">
-  <div class="container">
+<section class="contact section-animation">
+  <div class="container contact-container">
     <h2 class="contact-title">Contact Us</h2>
     <div class="contact-modal">
       <p class="contact-text">
@@ -9,7 +9,7 @@
       <form class="contact-form">
         <div class="contact-input-container">
           <input
-            class="contact-input-name"
+            class="contact-input-field"
             type="text"
             id="user-name"
             name="user-name"
@@ -19,7 +19,7 @@
         </div>
         <div class="contact-input-container">
           <input
-            class="contact-input-email"
+            class="contact-input-field"
             type="email"
             id="user-email"
             name="user-email"
@@ -30,7 +30,7 @@
         </div>
         <div class="contact-input-container">
           <input
-            class="contact-input-tel"
+            class="contact-input-field"
             type="tel"
             id="user-tel"
             name="user-tel"
@@ -43,7 +43,7 @@
           <textarea
             name="user-comment"
             id="user-comment"
-            rows="3"
+            rows="4"
             class="contact-comment-input"
             placeholder="Comment"
             required
@@ -87,5 +87,4 @@
       />
     </picture>
   </div>
-  
 </section>
