--- a/src/partials/1-header.html
+++ b/src/partials/1-header.html
@@ -1,4 +1,4 @@
-<header class="header">
+<header class="header" id="header">
   <div class="container header-container">
     <a class="header-logo" href="#">watchcharm</a>
     <div class="header-menu">
