--- a/src/partials/1-header.html
+++ b/src/partials/1-header.html
@@ -17,7 +17,7 @@
             <a href="#" class="header-nav-link">Sale</a>
           </li>
           <li class="header-nav-item">
-            <a href="#" class="header-nav-link">Reviews</a>
+            <a href="#reviews" class="header-nav-link">Reviews</a>
           </li>
           <li class="header-nav-item">
             <a href="#" class="header-nav-link">Contact Us</a>
