--- a/src/partials/5-advertisement.html
+++ b/src/partials/5-advertisement.html
@@ -1,4 +1,4 @@
-<section class="advertisement">
+<section class="advertisement section-animation" id="advertisement">
   <div class="container">
     <h2 class="visually-hidden">Advertisement</h2>
     <h3 class="advertisement-title">
