--- a/src/partials/1-header.html
+++ b/src/partials/1-header.html
@@ -33,7 +33,7 @@
             referrerpolicy="no-referrer"
           >
             <svg class="header-socials-icon" width="18" height="18">
-              <use href="../images/icons.svg#icon-facebook"></use>
+              <use href="./images/icons.svg#icon-facebook"></use>
             </svg>
           </a>
         </li>
@@ -45,7 +45,7 @@
             referrerpolicy="no-referrer"
           >
             <svg class="header-socials-icon" width="18" height="18">
-              <use href="../images/icons.svg#icon-instagram"></use>
+              <use href="./images/icons.svg#icon-instagram"></use>
             </svg>
           </a>
         </li>
@@ -57,7 +57,7 @@
             referrerpolicy="no-referrer"
           >
             <svg class="header-socials-icon" width="18" height="18">
-              <use href="../images/icons.svg#icon-youtube"></use>
+              <use href="./images/icons.svg#icon-youtube"></use>
             </svg>
           </a>
         </li>
