--- a/src/partials/9-footer.html
+++ b/src/partials/9-footer.html
@@ -1,24 +1,36 @@
-<footer class="footer-container">
+<footer id="footer" class="footer-container">
   <div class="footer-page">
     <div>
       <a class="footer-page-logo" href="./index.html">watchcharm</a>
       <ul class="footer-icon-list">
         <li class="footer-item-icon">
-          <a class="footer-icon-link" href="">
+          <a
+            class="footer-icon-link"
+            href="https://www.facebook.com/goITclub/"
+            target="_blank"
+          >
             <svg class="footer-icon-social" width="20" height="18">
               <use href="../images/icons.svg#icon-facebook"></use>
             </svg>
           </a>
         </li>
         <li class="footer-item-icon">
-          <a class="footer-icon-link" href="">
+          <a
+            class="footer-icon-link"
+            href="https://www.instagram.com/goitclub/"
+            target="_blank"
+          >
             <svg class="footer-icon-social" width="20" height="18">
               <use href="../images/icons.svg#icon-instagram"></use>
             </svg>
           </a>
         </li>
         <li class="footer-item-icon">
-          <a class="footer-icon-link" href="">
+          <a
+            class="footer-icon-link"
+            href="https://www.youtube.com/c/GoIT"
+            target="_blank"
+          >
             <svg class="footer-icon-social" width="20" height="18">
               <use href="../images/icons.svg#icon-youtube"></use>
             </svg>
@@ -30,6 +42,45 @@
       <a class="footer-tel-link" href="tel:+380684439426"
         >+380 (68) 443-94-26</a
       >
+    </div>
+    <div class="footer-text-cont">
+      <p class="footer-text">
+        Have the time of your life with our watches: where high-class
+        craftsmanship meets impeccable design
+      </p>
+    </div>
+    <div class="footer-navig">
+      <ul class="footer-navig-list">
+        <li class="footer-navig-item">
+          <a href="#home">Home</a>
+        </li>
+        <li class="footer-navig-item">
+          <a href="#about-us">About Us</a>
+        </li>
+        <li class="footer-navig-item">
+          <a href="#catalog">Catalog</a>
+        </li>
+        <li class="footer-navig-item">
+          <a href="#sale">Sale</a>
+        </li>
+        <li class="footer-navig-item">
+          <a href="#reviews">Reviews</a>
+        </li>
+        <li class="footer-navig-item">
+          <a class="about" href="#contact-us">Contact Us</a>
+        </li>
+      </ul>
+      <p class="footer-navig-text">
+        1678 S. Pioneer Road Salt Lake City UT 84104
+      </p>
+    </div>
+    <div class="footer-bottom">
+      <span class="underline"></span>
+      <p class="footer-bt-date">©2023 The Watch Spot. All rights reserved.</p>
+      <span class="footer-service">
+        <a class="footer-privacy" href="#">Terms of Service</a>
+      </span>
+      <a class="footer-privacy" href="#">Privacy Policy</a>
     </div>
   </div>
 </footer>
