--- a/src/partials/4-catalog.html
+++ b/src/partials/4-catalog.html
@@ -8,17 +8,17 @@
             <source media="(max-width: 767px)" srcset="
                 ./images/catalog/catalog_1.png    1x,
                 ./images/catalog/catalog_1@2x.png 2x
-              " type="images/png" />
-            <source media="(min-width: 767px)" srcset="
+              " type="image/png" />
+            <source media="(min-width: 768px)" srcset="
                 ./images/catalog/catalog_tablet_1.png    1x,
                 ./images/catalog/catalog_tablet_1@2x.png 2x
-              " type="images/png" />
+              " type="image/png" />
             <source media="(min-width: 1280px)" srcset="
                 ./images/catalog/catalog_desktop_1.png    1x,
-                ./images/catalog/catalog_desktop_1@2x.png 2x
-              " type="images/png" />
-            <img class="catalog-img" src="./images//catalog/catalog_desktop_1.png" alt="Garmin Fenix 7X Pro" width="292"
-              height="292" />
+                ./images/catalog/catalog_devsktop_1@2x.png 2x
+              " type="image/png" />
+            <img class="catalog-img" src="./images/catalog/catalog_1.png" alt="Garmin Fenix 7X Pro" width="208"
+              height="226" />
           </picture>
         </div>
         <div class="catalog-text-list">
@@ -32,17 +32,17 @@
             <source media="(max-width: 767px)" srcset="
                 ./images/catalog/catalog_2.png    1x,
                 ./images/catalog/catalog_2@2x.png 2x
-              " type="images/png" />
-            <source media="(min-width: 767px)" srcset="
+              " type="image/png" />
+            <source media="(min-width: 768px)" srcset="
                 ./images/catalog/catalog_tablet_2.png    1x,
                 ./images/catalog/catalog_tablet_2@2x.png
-              " type="images/png" />
+              " type="image/png" />
             <source media="(min-width: 1280px)" srcset="
                 ./images/catalog/catalog_desktop_2.png    1x,
                 ./images/catalog/catalog_desktop_2@2x.png 2x
-              " type="images/png" />
-            <img class="catalog-img" src="./images/catalog/catalog_desktop_2.png" alt="Garmin Fenix 7X Pro" width="292"
-              height="292" />
+              " type="image/png" />
+            <img class="catalog-img" src="./images/catalog/catalog_2.png" alt="Garmin Fenix 7X Pro" width="208"
+              height="226" />
           </picture>
         </div>
         <div class="catalog-text-list">
@@ -56,17 +56,17 @@
             <source media="(max-width: 767px)" srcset="
                 ./images/catalog/catalog_3.png    1x,
                 ./images/catalog/catalog_3@2x.png 2x
-              " type="images/png" />
-            <source media="(min-width: 767px)" srcset="
+              " type="image/png" />
+            <source media="(min-width: 768px)" srcset="
                 ./images/catalog/catalog_tablet_3.png    1x,
                 ./images/catalog/catalog_tablet_3@2x.png 2x
-              " type="images/png" />
+              " type="image/png" />
             <source media="(min-width: 1280px)" srcset="
                 ./images/catalog/catalog_desktop_3.png    1x,
                 ./images/catalog/catalog_desktop_3@2x.png 2x
-              " type="images/png" />
-            <img class="catalog-img" src="./images/catalog/catalog_desktop_3.png" alt="Garmin Fenix 7X Pro" width="292"
-              height="292" />
+              " type="image/png" />
+            <img class="catalog-img" src="./images/catalog/catalog_3.png" alt="Garmin Fenix 7X Pro" width="208"
+              height="226" />
           </picture>
         </div>
         <div class="catalog-text-list">
@@ -80,17 +80,17 @@
             <source media="(max-width: 767px)" srcset="
                 ./images/catalog/catalog_4.png    1x,
                 ./images/catalog/catalog_4@2x.png 2x
-              " type="images/png" />
-            <source media="(min-width: 767px)" srcset="
+              " type="image/png" />
+            <source media="(min-width: 768px)" srcset="
                 ./images/catalog/catalog_tablet_4.png    1x,
                 ./images/catalog/catalog_tablet_4@2x.png 2x
-              " type="images/png" />
+              " type="image/png" />
             <source media="(min-width: 1280px)" srcset="
                 ./images/catalog/catalog_desktop_4.png    1x,
                 ./images/catalog/catalog_desktop_4@2x.png 2x
-              " type="images/png" />
-            <img class="catalog-img" src="./images/catalog/catalog_desktop_4.png" alt="Garmin Fenix 7X Pro" width="292"
-              height="292" />
+              " type="image/png" />
+            <img class="catalog-img" src="./images/catalog/catalog_4.png" alt="Garmin Fenix 7X Pro" width="208"
+              height="226" />
           </picture>
         </div>
         <div class="catalog-text-list">
@@ -101,14 +101,14 @@
       <li class="catalog-item catalog-item-hide">
         <div class="catalog-box">
           <picture>
-            <source media="(min-width: 767px)" srcset="
+            <source media="(min-width: 768px)" srcset="
                 ./images/catalog/catalog_tablet_5.png    1x,
                 ./images/catalog/catalog_tablet_5@2x.png 2x
-              " type="images/png" />
+              " type="image/png" />
             <source media="(min-width: 1280px)" srcset="
                 ./images/catalog/catalog_desktop_5.png   1x,
                 ./images/catalog/catalog_desktop_5@2x.png 2x
-              " type="images/png" />
+              " type="image/png" />
             <img class="catalog-img" src="./images/catalog/catalog_desktop_5.png" alt="Garmin Fenix 7X Pro" width="292"
               height="292" />
           </picture>
@@ -121,14 +121,14 @@
       <li class="catalog-item catalog-item-hide">
         <div class="catalog-box">
           <picture>
-            <source media="(min-width: 767px)" srcset="
+            <source media="(min-width: 768px)" srcset="
                 ./images/catalog/catalog_tablet_6.png    1x,
                 ./images/catalog/catalog_tablet_6@2x.png 2x
-              " type="images/png" />
+              " type="image/png" />
             <source media="(min-width: 1280px)" srcset="
                 ./images/catalog/catalog_tablet_6.png      1x,
-                .//images/catalog/catalog_desktop_6@2x.png 2x
-              " type="images/png" />
+                ./images/catalog/catalog_desktop_6@2x.png 2x
+              " type="image/png" />
             <img class="catalog-img" src="./images/catalog/catalog_desktop_6.png" alt="Garmin Fenix 7X Pro" width="292"
               height="292" />
           </picture>
