--- a/src/partials/9-footer.html
+++ b/src/partials/9-footer.html
@@ -1,4 +1,4 @@
-<footer id="footer" class="footer-container">
+<footer id="footer" class="footer-container section-animation">
   <div class="footer-page">
     <div>
       <a class="footer-page-logo" href="./index.html">watchcharm</a>
@@ -9,8 +9,8 @@
             href="https://www.facebook.com/goITclub/"
             target="_blank"
           >
-            <svg class="footer-icon-social" width="20" height="18">
-              <use href="../images/icons.svg#icon-facebook"></use>
+            <svg class="footer-icon-social" width="20" height="20">
+              <use href="./images/icons.svg#icon-facebook"></use>
             </svg>
           </a>
         </li>
@@ -20,8 +20,8 @@
             href="https://www.instagram.com/goitclub/"
             target="_blank"
           >
-            <svg class="footer-icon-social" width="20" height="18">
-              <use href="../images/icons.svg#icon-instagram"></use>
+            <svg class="footer-icon-social" width="20" height="20">
+              <use href="./images/icons.svg#icon-instagram"></use>
             </svg>
           </a>
         </li>
@@ -31,8 +31,8 @@
             href="https://www.youtube.com/c/GoIT"
             target="_blank"
           >
-            <svg class="footer-icon-social" width="20" height="18">
-              <use href="../images/icons.svg#icon-youtube"></use>
+            <svg class="footer-icon-social" width="20" height="20">
+              <use href="./images/icons.svg#icon-youtube"></use>
             </svg>
           </a>
         </li>
