--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -2,6 +2,8 @@
 
 @import url('./reset.css');
 
+@import url('./common.css');
+
 @import url('./1-header.css');
 /* https://github.com/dimahutsol */
 
