--- a/src/css/4-catalog.css
+++ b/src/css/4-catalog.css
@@ -94,6 +94,12 @@
 }
 
 @media screen and (min-width: 768px) {
+
+    .catalog {
+        padding-top: 40px;
+        padding-bottom: 40px;
+    }
+
     .catalog-list {
         display: flex;
         flex-direction: row;
@@ -145,6 +151,11 @@
 }
 
 @media screen and (min-width: 1280px) {
+    .catalog {
+        padding-top: 50px;
+        padding-bottom: 50px;
+    }
+
     .catalog-img {
         width: 292px;
         height: 292px;
