--- a/src/partials/4-catalog.html
+++ b/src/partials/4-catalog.html
@@ -1,4 +1,4 @@
-<section class="catalog section-animation">
+<section class="catalog section-animation" id="catalog">
   <div class="container">
     <h2 class="catalog-title">Catalog</h2>
     <ul class="catalog-list">
@@ -6,19 +6,19 @@
         <div class="catalog-box">
           <picture>
             <source media="(max-width: 767px)" srcset="
-                ./images/catalog/catalog_1.png    1x,
-                ./images/catalog/catalog_1@2x.png 2x
+                ../images/catalog/catalog_1.png    1x,
+                ../images/catalog/catalog_1@2x.png 2x
               " type="image/png" />
             <source media="(min-width: 768px)" srcset="
-                ./images/catalog/catalog_tablet_1.png    1x,
-                ./images/catalog/catalog_tablet_1@2x.png 2x
+                ../images/catalog/catalog_tablet_1.png    1x,
+                ../images/catalog/catalog_tablet_1@2x.png 2x
               " type="image/png" />
             <source media="(min-width: 1280px)" srcset="
-                ./images/catalog/catalog_desktop_1.png    1x,
-                ./images/catalog/catalog_devsktop_1@2x.png 2x
+                ../images/catalog/catalog_desktop_1.png    1x,
+                ../images/catalog/catalog_devsktop_1@2x.png 2x
               " type="image/png" />
-            <img class="catalog-img" src="./images/catalog/catalog_1.png" alt="Garmin Fenix 7X Pro" width="208"
-              height="226" />
+            <img class="catalog-img" src="../images/catalog/catalog_1.png" alt="Garmin Fenix 7X Pro" width="208"
+              height="226" loading="lazy" />
           </picture>
         </div>
         <div class="catalog-text-list">
@@ -30,19 +30,19 @@
         <div class="catalog-box">
           <picture>
             <source media="(max-width: 767px)" srcset="
-                ./images/catalog/catalog_2.png    1x,
-                ./images/catalog/catalog_2@2x.png 2x
+                ../images/catalog/catalog_2.png    1x,
+                ../images/catalog/catalog_2@2x.png 2x
               " type="image/png" />
             <source media="(min-width: 768px)" srcset="
-                ./images/catalog/catalog_tablet_2.png    1x,
-                ./images/catalog/catalog_tablet_2@2x.png
+                ../images/catalog/catalog_tablet_2.png    1x,
+                ../images/catalog/catalog_tablet_2@2x.png
               " type="image/png" />
             <source media="(min-width: 1280px)" srcset="
-                ./images/catalog/catalog_desktop_2.png    1x,
-                ./images/catalog/catalog_desktop_2@2x.png 2x
+                ../images/catalog/catalog_desktop_2.png    1x,
+                ../images/catalog/catalog_desktop_2@2x.png 2x
               " type="image/png" />
-            <img class="catalog-img" src="./images/catalog/catalog_2.png" alt="Garmin Fenix 7X Pro" width="208"
-              height="226" />
+            <img class="catalog-img" src="../images/catalog/catalog_2.png" alt="Garmin Fenix 7X Pro" width="208"
+              height="226" loading="lazy" />
           </picture>
         </div>
         <div class="catalog-text-list">
@@ -54,19 +54,19 @@
         <div class="catalog-box">
           <picture>
             <source media="(max-width: 767px)" srcset="
-                ./images/catalog/catalog_3.png    1x,
-                ./images/catalog/catalog_3@2x.png 2x
+                ../images/catalog/catalog_3.png    1x,
+                ../images/catalog/catalog_3@2x.png 2x
               " type="image/png" />
             <source media="(min-width: 768px)" srcset="
-                ./images/catalog/catalog_tablet_3.png    1x,
-                ./images/catalog/catalog_tablet_3@2x.png 2x
+                ../images/catalog/catalog_tablet_3.png    1x,
+                ../images/catalog/catalog_tablet_3@2x.png 2x
               " type="image/png" />
             <source media="(min-width: 1280px)" srcset="
-                ./images/catalog/catalog_desktop_3.png    1x,
-                ./images/catalog/catalog_desktop_3@2x.png 2x
+                ../images/catalog/catalog_desktop_3.png    1x,
+                ../images/catalog/catalog_desktop_3@2x.png 2x
               " type="image/png" />
-            <img class="catalog-img" src="./images/catalog/catalog_3.png" alt="Garmin Fenix 7X Pro" width="208"
-              height="226" />
+            <img class="catalog-img" src="../images/catalog/catalog_3.png" alt="Garmin Fenix 7X Pro" width="208"
+              height="226" loading="lazy" />
           </picture>
         </div>
         <div class="catalog-text-list">
@@ -78,19 +78,19 @@
         <div class="catalog-box">
           <picture>
             <source media="(max-width: 767px)" srcset="
-                ./images/catalog/catalog_4.png    1x,
-                ./images/catalog/catalog_4@2x.png 2x
+                ../images/catalog/catalog_4.png    1x,
+                ../images/catalog/catalog_4@2x.png 2x
               " type="image/png" />
             <source media="(min-width: 768px)" srcset="
-                ./images/catalog/catalog_tablet_4.png    1x,
-                ./images/catalog/catalog_tablet_4@2x.png 2x
+                ../images/catalog/catalog_tablet_4.png    1x,
+                ../images/catalog/catalog_tablet_4@2x.png 2x
               " type="image/png" />
             <source media="(min-width: 1280px)" srcset="
-                ./images/catalog/catalog_desktop_4.png    1x,
-                ./images/catalog/catalog_desktop_4@2x.png 2x
+                ../images/catalog/catalog_desktop_4.png    1x,
+                ../images/catalog/catalog_desktop_4@2x.png 2x
               " type="image/png" />
-            <img class="catalog-img" src="./images/catalog/catalog_4.png" alt="Garmin Fenix 7X Pro" width="208"
-              height="226" />
+            <img class="catalog-img" src="../images/catalog/catalog_4.png" alt="Garmin Fenix 7X Pro" width="208"
+              height="226" loading="lazy" />
           </picture>
         </div>
         <div class="catalog-text-list">
@@ -102,15 +102,15 @@
         <div class="catalog-box">
           <picture>
             <source media="(min-width: 768px)" srcset="
-                ./images/catalog/catalog_tablet_5.png    1x,
-                ./images/catalog/catalog_tablet_5@2x.png 2x
+                ../images/catalog/catalog_tablet_5.png    1x,
+                ../images/catalog/catalog_tablet_5@2x.png 2x
               " type="image/png" />
             <source media="(min-width: 1280px)" srcset="
-                ./images/catalog/catalog_desktop_5.png   1x,
-                ./images/catalog/catalog_desktop_5@2x.png 2x
+                ../images/catalog/catalog_desktop_5.png   1x,
+                ../images/catalog/catalog_desktop_5@2x.png 2x
               " type="image/png" />
-            <img class="catalog-img" src="./images/catalog/catalog_desktop_5.png" alt="Garmin Fenix 7X Pro" width="292"
-              height="292" />
+            <img class="catalog-img" src="../images/catalog/catalog_desktop_5.png" alt="Garmin Fenix 7X Pro" width="292"
+              height="292" loading="lazy" />
           </picture>
         </div>
         <div class="catalog-text-list">
@@ -122,15 +122,15 @@
         <div class="catalog-box">
           <picture>
             <source media="(min-width: 768px)" srcset="
-                ./images/catalog/catalog_tablet_6.png    1x,
-                ./images/catalog/catalog_tablet_6@2x.png 2x
+                ../images/catalog/catalog_tablet_6.png    1x,
+                ../images/catalog/catalog_tablet_6@2x.png 2x
               " type="image/png" />
             <source media="(min-width: 1280px)" srcset="
-                ./images/catalog/catalog_tablet_6.png      1x,
-                ./images/catalog/catalog_desktop_6@2x.png 2x
+                ../images/catalog/catalog_tablet_6.png      1x,
+                ../images/catalog/catalog_desktop_6@2x.png 2x
               " type="image/png" />
-            <img class="catalog-img" src="./images/catalog/catalog_desktop_6.png" alt="Garmin Fenix 7X Pro" width="292"
-              height="292" />
+            <img class="catalog-img" src="../images/catalog/catalog_desktop_6.png" alt="Garmin Fenix 7X Pro" width="292"
+              height="292" loading="lazy" />
           </picture>
         </div>
         <div class="catalog-text-list">
